--- a/modulos/tramites.html
+++ b/modulos/tramites.html
@@ -22,9 +22,9 @@
                         </div>
                     </div>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
+                    <i class="fas fa-bars" style="color: #fff; font-size: 30px;"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -38,8 +38,20 @@
                             <a class="nav-link text-light" href="./infoUtil.html">Informacio Util</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-light" href="./mapaJuntas.html">Mapas de Juntas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="./juntaItinerante.html.html">Juntas Itinerante</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-light" href="./contacto.html">Contacto</a>
                         </li>
+                        <hr style="border: 1px solid #fff;">
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Salir</a>
+                        </li>
+                        <hr style="border: 1px solid #fff;">
+
 
                     </ul>
                 </div>
@@ -101,6 +113,7 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://kit.fontawesome.com/c134f6e6f0.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
