--- a/modulos/mapaJuntas.html
+++ b/modulos/mapaJuntas.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consejo del Discapacitado</title>
     <link rel="stylesheet" href="../assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -57,60 +57,26 @@
                 </div>
             </div>
         </nav>
-        <section id="inicioScreen">
-            <main class="d-flex justify-content-center align-items-center flex-column ">
-                <h2 class="colorRN">Contactanos!</h2>
-                <form id="contactForm" class="p-3">
-                    <div class="mb-3 d-flex flex-column">
-                        <label for="" class="form-label text-light">Nombre</label>
-                        <input type="text" class="inputContact" id="">
-                    </div>
-                    <div class="mb-3 d-flex flex-column">
-                        <label for="emailUser" class="form-label text-light">Email</label>
-                        <input type="email" class="inputContact" id="emailUser" aria-describedby="emailHelp">
-                    </div>
-                    <div class="mb-3 d-flex flex-column">
-                        <label for="mensBox" class="text-light mb-2">Mensaje</label>
-                        <textarea name="mensBox" id="mensBox" cols="30" rows="10" class="inputContact"></textarea>
-                    </div>
-                    <div class="d-flex justify-content-end">
-                        <button type="text" class="btn colorBgRN text-light m-3" data-bs-toggle="modal"
-                            data-bs-target="#modalMsjEnv">Enviar
-                        </button>
-                    </div>
-                </form>
-            </main>
+        <section id="inicioScreen" class="text-center">
+            <h2 class="colorRN">Encontra tu Junta Evaluadora</h2>
+            <div class="content" style="display: flex; justify-content: center;">
+                <div id="contentMap" style="height: 90vh; width: 90%;">
+
+                </div>
+            </div>
         </section>
     </main>
 
 
-    <!-- modals -->
-
-    <div id="modalMsjEnv" class="modal" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content modalSingUp">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body d-flex justify-content-center flex-column align-items-center">
-                    <h1 class="modal-title colorRN">¡Gracias por contactarte!</h1>
-                    <h5 class="text-light">Te envairemos a tu correo un numero de registro</h5>
-                </div>
-                <div class="col-12 d-flex justify-content-center align-items-center m-3" style="height: 50px;">
-                    <img src="../assets/img/logo.png" alt="">
-                    <h6 class="text-light" style="margin-left: 15px;">Consejo del Discapacitado</h6>
-                </div>
-            </div>
-
-        </div>
-    </div>
 
     <!--Scripts-->
-    <script src="../assets/main.js" type="module"></script>
+    <script src="../assets/funtions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsBVfC7FwKgNm5RB_hLi8TOFVLBJgrW_Q&callback=iniciarMap"></script>
     <script src="https://kit.fontawesome.com/c134f6e6f0.js" crossorigin="anonymous"></script>
 </body>
 
